[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "org-dex-parse"
version = "0.1.1"
description = "Parse org-mode files into structured data for the org-dex indexing system"
readme = {file = "README.org", content-type = "text/plain"}
license = "GPL-3.0-or-later"
requires-python = ">=3.11"
authors = [
    { name = "gdvek" },
]
keywords = ["org-mode", "orgparse", "parser", "emacs", "org-dex"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Text Processing :: Markup",
]
dependencies = [
    "orgparse>=0.4,<0.5",
]

[project.urls]
Homepage = "https://github.com/gdvek/org-dex-parse"
Repository = "https://github.com/gdvek/org-dex-parse"
Issues = "https://github.com/gdvek/org-dex-parse/issues"
Changelog = "https://github.com/gdvek/org-dex-parse/blob/main/CHANGELOG.org"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
]
